@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.commons.converters;
@@ -7,6 +7,7 @@ package io.airbyte.commons.converters;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.google.common.collect.Lists;
+import io.airbyte.api.client.model.generated.AirbyteStreamAndConfiguration;
 import io.airbyte.commons.text.Names;
 import io.airbyte.protocol.models.AirbyteCatalog;
 import io.airbyte.protocol.models.AirbyteStream;
@@ -14,6 +15,7 @@ import io.airbyte.protocol.models.CatalogHelpers;
 import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
 import io.airbyte.protocol.models.SyncMode;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
@@ -32,32 +34,40 @@ class CatalogClientConvertersTest {
       .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
 
   private static final io.airbyte.api.client.model.generated.AirbyteStream CLIENT_STREAM =
-      new io.airbyte.api.client.model.generated.AirbyteStream()
-          .name(STREAM_NAME)
-          .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of(ID_FIELD_NAME, JsonSchemaType.STRING)))
-          .defaultCursorField(Lists.newArrayList(ID_FIELD_NAME))
-          .sourceDefinedCursor(false)
-          .sourceDefinedPrimaryKey(Collections.emptyList())
-          .supportedSyncModes(List.of(io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH,
-              io.airbyte.api.client.model.generated.SyncMode.INCREMENTAL));
+      new io.airbyte.api.client.model.generated.AirbyteStream(
+          STREAM_NAME,
+          CatalogHelpers.fieldsToJsonSchema(Field.of(ID_FIELD_NAME, JsonSchemaType.STRING)),
+          List.of(io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH,
+              io.airbyte.api.client.model.generated.SyncMode.INCREMENTAL),
+          false,
+          List.of(ID_FIELD_NAME),
+          List.of(),
+          null,
+          null);
   private static final io.airbyte.api.client.model.generated.AirbyteStreamConfiguration CLIENT_DEFAULT_STREAM_CONFIGURATION =
-      new io.airbyte.api.client.model.generated.AirbyteStreamConfiguration()
-          .syncMode(io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH)
-          .cursorField(Lists.newArrayList(ID_FIELD_NAME))
-          .destinationSyncMode(io.airbyte.api.client.model.generated.DestinationSyncMode.APPEND)
-          .primaryKey(Collections.emptyList())
-          .aliasName(Names.toAlphanumericAndUnderscore(STREAM_NAME))
-          .selected(true);
+      new io.airbyte.api.client.model.generated.AirbyteStreamConfiguration(
+          io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH,
+          io.airbyte.api.client.model.generated.DestinationSyncMode.APPEND,
+          List.of(ID_FIELD_NAME),
+          List.of(),
+          Names.toAlphanumericAndUnderscore(STREAM_NAME),
+          true,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null);
 
   private static final AirbyteCatalog BASIC_MODEL_CATALOG = new AirbyteCatalog().withStreams(
       Lists.newArrayList(STREAM));
 
   private static final io.airbyte.api.client.model.generated.AirbyteCatalog EXPECTED_CLIENT_CATALOG =
-      new io.airbyte.api.client.model.generated.AirbyteCatalog()
-          .streams(Lists.newArrayList(
-              new io.airbyte.api.client.model.generated.AirbyteStreamAndConfiguration()
-                  .stream(CLIENT_STREAM)
-                  .config(CLIENT_DEFAULT_STREAM_CONFIGURATION)));
+      new io.airbyte.api.client.model.generated.AirbyteCatalog(
+          List.of(
+              new io.airbyte.api.client.model.generated.AirbyteStreamAndConfiguration(
+                  CLIENT_STREAM,
+                  CLIENT_DEFAULT_STREAM_CONFIGURATION)));
 
   @Test
   void testConvertToClientAPI() {
@@ -69,6 +79,55 @@ class CatalogClientConvertersTest {
   void testConvertToProtocol() {
     assertEquals(BASIC_MODEL_CATALOG,
         CatalogClientConverters.toAirbyteProtocol(EXPECTED_CLIENT_CATALOG));
+  }
+
+  @Test
+  void testIsResumableImport() {
+    final List<Boolean> boolValues = new ArrayList<>(List.of(Boolean.TRUE, Boolean.FALSE));
+    boolValues.add(null);
+    for (final Boolean isResumable : boolValues) {
+      final AirbyteCatalog catalog = new AirbyteCatalog()
+          .withStreams(List.of(new AirbyteStream().withName("user").withIsResumable(isResumable)));
+      final io.airbyte.api.client.model.generated.AirbyteCatalog apiCatalog = CatalogClientConverters.toAirbyteCatalogClientApi(catalog);
+      assertEquals(isResumable, apiCatalog.getStreams().get(0).getStream().isResumable());
+    }
+  }
+
+  @Test
+  void testIsResumableExport() {
+    final List<Boolean> boolValues = new ArrayList<>(List.of(Boolean.TRUE, Boolean.FALSE));
+    boolValues.add(null);
+    for (final Boolean isResumable : boolValues) {
+      final var stream = new io.airbyte.api.client.model.generated.AirbyteStream(
+          STREAM_NAME,
+          CatalogHelpers.fieldsToJsonSchema(Field.of(ID_FIELD_NAME, JsonSchemaType.STRING)),
+          List.of(io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH,
+              io.airbyte.api.client.model.generated.SyncMode.INCREMENTAL),
+          false,
+          List.of(ID_FIELD_NAME),
+          List.of(),
+          null,
+          isResumable);
+      final var conf = new io.airbyte.api.client.model.generated.AirbyteStreamConfiguration(
+          io.airbyte.api.client.model.generated.SyncMode.FULL_REFRESH,
+          io.airbyte.api.client.model.generated.DestinationSyncMode.APPEND,
+          List.of(ID_FIELD_NAME),
+          List.of(),
+          Names.toAlphanumericAndUnderscore(STREAM_NAME),
+          true,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null);
+      final var streamAndConf = new AirbyteStreamAndConfiguration(stream, conf);
+      final List<AirbyteStreamAndConfiguration> streams = List.of(streamAndConf);
+      final var apiCatalog = new io.airbyte.api.client.model.generated.AirbyteCatalog(streams);
+
+      final AirbyteCatalog catalog = CatalogClientConverters.toAirbyteProtocol(apiCatalog);
+      assertEquals(isResumable, catalog.getStreams().get(0).getIsResumable());
+    }
   }
 
 }
