@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.workers;
@@ -11,25 +11,38 @@ import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import io.airbyte.api.client.AirbyteApiClient;
+import io.airbyte.api.client.generated.ActorDefinitionVersionApi;
 import io.airbyte.api.client.generated.ConnectionApi;
 import io.airbyte.api.client.generated.JobsApi;
 import io.airbyte.api.client.generated.SecretsPersistenceConfigApi;
 import io.airbyte.api.client.generated.StateApi;
-import io.airbyte.api.client.invoker.generated.ApiException;
+import io.airbyte.api.client.model.generated.ActorDefinitionVersionBreakingChanges;
+import io.airbyte.api.client.model.generated.ActorDefinitionVersionRead;
 import io.airbyte.api.client.model.generated.AirbyteCatalog;
 import io.airbyte.api.client.model.generated.AirbyteStream;
 import io.airbyte.api.client.model.generated.AirbyteStreamAndConfiguration;
 import io.airbyte.api.client.model.generated.AirbyteStreamConfiguration;
 import io.airbyte.api.client.model.generated.CatalogDiff;
+import io.airbyte.api.client.model.generated.ConnectionAndJobIdRequestBody;
 import io.airbyte.api.client.model.generated.ConnectionIdRequestBody;
 import io.airbyte.api.client.model.generated.ConnectionRead;
 import io.airbyte.api.client.model.generated.ConnectionState;
+import io.airbyte.api.client.model.generated.ConnectionStatus;
+import io.airbyte.api.client.model.generated.DestinationIdRequestBody;
+import io.airbyte.api.client.model.generated.DestinationSyncMode;
 import io.airbyte.api.client.model.generated.FieldTransform;
+import io.airbyte.api.client.model.generated.JobConfigType;
 import io.airbyte.api.client.model.generated.JobOptionalRead;
 import io.airbyte.api.client.model.generated.JobRead;
+import io.airbyte.api.client.model.generated.JobStatus;
+import io.airbyte.api.client.model.generated.NormalizationDestinationDefinitionConfig;
 import io.airbyte.api.client.model.generated.ResetConfig;
+import io.airbyte.api.client.model.generated.SchemaChangeBackfillPreference;
 import io.airbyte.api.client.model.generated.StreamDescriptor;
 import io.airbyte.api.client.model.generated.StreamTransform;
+import io.airbyte.api.client.model.generated.StreamTransformUpdateStream;
+import io.airbyte.api.client.model.generated.SupportLevel;
+import io.airbyte.api.client.model.generated.SupportState;
 import io.airbyte.api.client.model.generated.SyncMode;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.config.ConnectionContext;
@@ -38,16 +51,22 @@ import io.airbyte.config.State;
 import io.airbyte.config.SyncResourceRequirements;
 import io.airbyte.config.helpers.StateMessageHelper;
 import io.airbyte.config.secrets.SecretsRepositoryReader;
+import io.airbyte.featureflag.AutoBackfillOnNewColumns;
 import io.airbyte.featureflag.FeatureFlagClient;
+import io.airbyte.featureflag.Flag;
 import io.airbyte.featureflag.TestClient;
+import io.airbyte.featureflag.Workspace;
 import io.airbyte.persistence.job.models.IntegrationLauncherConfig;
 import io.airbyte.persistence.job.models.JobRunConfig;
 import io.airbyte.workers.models.RefreshSchemaActivityOutput;
 import io.airbyte.workers.models.ReplicationActivityInput;
+import java.io.IOException;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 /**
  * Tests for the replication activity specifically.
@@ -59,12 +78,34 @@ class ReplicationInputHydratorTest {
   private static final UUID DESTINATION_ID = UUID.randomUUID();
   private static final JsonNode SOURCE_CONFIG = JsonNodeFactory.instance.objectNode();
   private static final JsonNode DESTINATION_CONFIG = JsonNodeFactory.instance.objectNode();
+  private static final String CONNECTION_NAME = "connection-name";
 
   private static final String TEST_STREAM_NAME = "test-stream-name";
   private static final String TEST_STREAM_NAMESPACE = "test-stream-namespace";
-  private static final AirbyteCatalog SYNC_CATALOG = new AirbyteCatalog().addStreamsItem(new AirbyteStreamAndConfiguration()
-      .stream(new AirbyteStream().addSupportedSyncModesItem(SyncMode.INCREMENTAL).name(TEST_STREAM_NAME).namespace(TEST_STREAM_NAMESPACE))
-      .config(new AirbyteStreamConfiguration().syncMode(SyncMode.INCREMENTAL)));
+  private static final AirbyteCatalog SYNC_CATALOG = new AirbyteCatalog(List.of(
+      new AirbyteStreamAndConfiguration(
+          new AirbyteStream(
+              TEST_STREAM_NAME,
+              null,
+              List.of(SyncMode.INCREMENTAL),
+              null,
+              null,
+              null,
+              TEST_STREAM_NAMESPACE,
+              null),
+          new AirbyteStreamConfiguration(
+              SyncMode.INCREMENTAL,
+              DestinationSyncMode.APPEND,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null))));
   private static final ConnectionState CONNECTION_STATE_RESPONSE = Jsons.deserialize(String
       .format("""
               {
@@ -95,19 +136,26 @@ class ReplicationInputHydratorTest {
         }
       }]
       """));
-  private static final JobRunConfig JOB_RUN_CONFIG = new JobRunConfig();
+  private static final Long JOB_ID = 123L;
+  private static final JobRunConfig JOB_RUN_CONFIG = new JobRunConfig().withJobId(JOB_ID.toString());
   private static final IntegrationLauncherConfig DESTINATION_LAUNCHER_CONFIG = new IntegrationLauncherConfig();
   private static final IntegrationLauncherConfig SOURCE_LAUNCHER_CONFIG = new IntegrationLauncherConfig();
   private static final SyncResourceRequirements SYNC_RESOURCE_REQUIREMENTS = new SyncResourceRequirements();
   private static final UUID WORKSPACE_ID = UUID.randomUUID();
-  private static final CatalogDiff CATALOG_DIFF = new CatalogDiff()
-      .addTransformsItem(new StreamTransform()
-          .streamDescriptor(new StreamDescriptor()
-              .name(SYNC_CATALOG.getStreams().get(0).getStream().getName())
-              .namespace(SYNC_CATALOG.getStreams().get(0).getStream().getNamespace()))
-          .transformType(StreamTransform.TransformTypeEnum.UPDATE_STREAM)
-          .addUpdateStreamItem(new FieldTransform()
-              .transformType(FieldTransform.TransformTypeEnum.ADD_FIELD)));
+  private static final CatalogDiff CATALOG_DIFF = new CatalogDiff(
+      List.of(
+          new StreamTransform(
+              StreamTransform.TransformType.UPDATE_STREAM,
+              new StreamDescriptor(SYNC_CATALOG.getStreams().getFirst().getStream().getName(),
+                  SYNC_CATALOG.getStreams().getFirst().getStream().getNamespace()),
+              new StreamTransformUpdateStream(List.of(new FieldTransform(
+                  FieldTransform.TransformType.ADD_FIELD,
+                  List.of(),
+                  false,
+                  null,
+                  null,
+                  null)),
+                  List.of()))));
   private static SecretsRepositoryReader secretsRepositoryReader;
   private static AirbyteApiClient airbyteApiClient;
   private static ConnectionApi connectionApi;
@@ -115,9 +163,10 @@ class ReplicationInputHydratorTest {
   private static JobsApi jobsApi;
   private static FeatureFlagClient featureFlagClient;
   private SecretsPersistenceConfigApi secretsPersistenceConfigApi;
+  private ActorDefinitionVersionApi actorDefinitionVersionApi;
 
   @BeforeEach
-  void setup() throws ApiException {
+  void setup() throws IOException {
     secretsRepositoryReader = mock(SecretsRepositoryReader.class);
     airbyteApiClient = mock(AirbyteApiClient.class);
     connectionApi = mock(ConnectionApi.class);
@@ -125,23 +174,17 @@ class ReplicationInputHydratorTest {
     jobsApi = mock(JobsApi.class);
     featureFlagClient = mock(TestClient.class);
     secretsPersistenceConfigApi = mock(SecretsPersistenceConfigApi.class);
+    actorDefinitionVersionApi = mock(ActorDefinitionVersionApi.class);
     when(airbyteApiClient.getConnectionApi()).thenReturn(connectionApi);
     when(airbyteApiClient.getStateApi()).thenReturn(stateApi);
     when(airbyteApiClient.getJobsApi()).thenReturn(jobsApi);
     when(airbyteApiClient.getSecretPersistenceConfigApi()).thenReturn(secretsPersistenceConfigApi);
-    when(connectionApi.getConnection(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(new ConnectionRead()
-        .connectionId(CONNECTION_ID)
-        .syncCatalog(SYNC_CATALOG));
-    when(stateApi.getState(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(CONNECTION_STATE_RESPONSE);
+    when(airbyteApiClient.getActorDefinitionVersionApi()).thenReturn(actorDefinitionVersionApi);
+    when(stateApi.getState(new ConnectionIdRequestBody(CONNECTION_ID))).thenReturn(CONNECTION_STATE_RESPONSE);
   }
 
   private ReplicationInputHydrator getReplicationInputHydrator() {
-    return new ReplicationInputHydrator(
-        airbyteApiClient.getConnectionApi(),
-        airbyteApiClient.getJobsApi(),
-        airbyteApiClient.getStateApi(),
-        secretsPersistenceConfigApi, secretsRepositoryReader,
-        featureFlagClient);
+    return new ReplicationInputHydrator(airbyteApiClient, secretsRepositoryReader, featureFlagClient);
   }
 
   private ReplicationActivityInput getDefaultReplicationActivityInputForTest() {
@@ -163,11 +206,19 @@ class ReplicationInputHydratorTest {
         "unused",
         "unused",
         null, // unused
-        new ConnectionContext().withOrganizationId(UUID.randomUUID()));
+        new ConnectionContext().withOrganizationId(UUID.randomUUID()),
+        false,
+        false);
   }
 
-  @Test
-  void testGenerateReplicationInputRetrievesInputs() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  void testGenerateReplicationInputRetrievesInputs(final boolean withRefresh) throws Exception {
+    if (withRefresh) {
+      mockRefresh();
+    } else {
+      mockNonRefresh();
+    }
     // Verify that we get the state and catalog from the API.
     final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
 
@@ -178,33 +229,91 @@ class ReplicationInputHydratorTest {
     assertEquals(TEST_STREAM_NAME, replicationInput.getCatalog().getStreams().get(0).getStream().getName());
   }
 
-  @Test
-  void testGenerateReplicationInputHandlesResets() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  void testGenerateReplicationInputHandlesResets(final boolean withRefresh) throws Exception {
+    if (withRefresh) {
+      mockRefresh();
+    } else {
+      mockNonRefresh();
+    }
     // Verify that if the sync is a reset, we retrieve the job info and handle the streams accordingly.
     final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
     final ReplicationActivityInput input = getDefaultReplicationActivityInputForTest();
     input.setIsReset(true);
-    when(jobsApi.getLastReplicationJob(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(
-        new JobOptionalRead().job(new JobRead().resetConfig(new ResetConfig().streamsToReset(List.of(
-            new StreamDescriptor().name(TEST_STREAM_NAME).namespace(TEST_STREAM_NAMESPACE))))));
-    when(connectionApi.getConnection(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(new ConnectionRead()
-        .connectionId(CONNECTION_ID)
-        .syncCatalog(SYNC_CATALOG));
+    when(jobsApi.getLastReplicationJob(new ConnectionIdRequestBody(CONNECTION_ID))).thenReturn(
+        new JobOptionalRead(new JobRead(
+            JOB_ID,
+            JobConfigType.SYNC,
+            CONNECTION_ID.toString(),
+            System.currentTimeMillis(),
+            System.currentTimeMillis(),
+            JobStatus.CANCELLED,
+            null,
+            null,
+            new ResetConfig(List.of(new StreamDescriptor(TEST_STREAM_NAME, TEST_STREAM_NAMESPACE))),
+            null,
+            null,
+            null)));
     final var replicationInput = replicationInputHydrator.getHydratedReplicationInput(input);
     assertEquals(1, replicationInput.getCatalog().getStreams().size());
-    assertEquals(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, replicationInput.getCatalog().getStreams().get(0).getSyncMode());
+    assertEquals(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, replicationInput.getCatalog().getStreams().getFirst().getSyncMode());
   }
 
-  @Test
-  void testGenerateReplicationInputHandlesBackfills() throws Exception {
-    // Verify that if we have input from the schema refresh activity, that we clear state accordingly to
-    // prepare for backfills.
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  void testGenerateReplicationInputHandlesBackfills(final boolean withRefresh) throws Exception {
+    if (withRefresh) {
+      mockRefresh();
+    } else {
+      mockNonRefresh();
+    }
+    // Verify that if backfill is enabled, and we have an appropriate diff, then we clear the state for
+    // the affected streams.
+    mockEnableFeatureFlagForWorkspace(AutoBackfillOnNewColumns.INSTANCE, WORKSPACE_ID);
+    mockEnableBackfillForConnection(withRefresh);
     final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
     final ReplicationActivityInput input = getDefaultReplicationActivityInputForTest();
     input.setSchemaRefreshOutput(new RefreshSchemaActivityOutput(CATALOG_DIFF));
     final var replicationInput = replicationInputHydrator.getHydratedReplicationInput(input);
     final var typedState = StateMessageHelper.getTypedState(replicationInput.getState().getState());
     assertEquals(JsonNodeFactory.instance.nullNode(), typedState.get().getStateMessages().get(0).getStream().getStreamState());
+  }
+
+  private void mockEnableFeatureFlagForWorkspace(final Flag<Boolean> flag, final UUID workspaceId) {
+    when(featureFlagClient.boolVariation(flag, new Workspace(workspaceId))).thenReturn(true);
+  }
+
+  private void mockEnableBackfillForConnection(final boolean withRefresh) throws IOException {
+    if (withRefresh) {
+      when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody(CONNECTION_ID, JOB_ID)))
+          .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false,
+              null, null, null, null, null, null, null, null, null, null, null, null, null, null, SchemaChangeBackfillPreference.ENABLED, null));
+    } else {
+      when(connectionApi.getConnection(new ConnectionIdRequestBody(CONNECTION_ID)))
+          .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false,
+              null, null, null, null, null, null, null, null, null, null, null, null, null, null, SchemaChangeBackfillPreference.ENABLED, null));
+    }
+  }
+
+  private void mockRefresh() throws IOException {
+    when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody(CONNECTION_ID, JOB_ID)))
+        .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false, null,
+            null, null, null, null, null, null, null, null, null, null, null, null, null, null, null));
+
+    when(actorDefinitionVersionApi.getActorDefinitionVersionForDestinationId(new DestinationIdRequestBody(DESTINATION_ID)))
+        .thenReturn(new ActorDefinitionVersionRead("", "", false, true, new NormalizationDestinationDefinitionConfig(), false, SupportState.SUPPORTED,
+            SupportLevel.CERTIFIED, new ActorDefinitionVersionBreakingChanges(List.of(), LocalDate.EPOCH)));
+  }
+
+  private void mockNonRefresh() throws IOException {
+    when(connectionApi.getConnection(new ConnectionIdRequestBody(CONNECTION_ID)))
+        .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false, null,
+            null, null, null, null, null, null, null, null, null, null, null, null, null, null, null));
+
+    when(actorDefinitionVersionApi.getActorDefinitionVersionForDestinationId(new DestinationIdRequestBody(DESTINATION_ID)))
+        .thenReturn(new ActorDefinitionVersionRead("", "", false, false, new NormalizationDestinationDefinitionConfig(), false,
+            SupportState.SUPPORTED, SupportLevel.CERTIFIED, new ActorDefinitionVersionBreakingChanges(List.of(), LocalDate.EPOCH)));
   }
 
 }
