@@ -1,58 +1,32 @@
 /*
- * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.test.acceptance;
 
-import static io.airbyte.test.utils.AcceptanceTestHarness.COLUMN_ID;
 import static io.airbyte.test.utils.AcceptanceTestHarness.PUBLIC_SCHEMA_NAME;
-import static io.airbyte.test.utils.AcceptanceTestHarness.waitForConnectionState;
-import static io.airbyte.test.utils.AcceptanceTestHarness.waitForSuccessfulJob;
-import static io.airbyte.test.utils.AcceptanceTestHarness.waitWhileJobHasStatus;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static io.airbyte.test.utils.AcceptanceTestUtils.createAirbyteApiClient;
+import static io.airbyte.test.utils.AcceptanceTestUtils.modifyCatalog;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
-import io.airbyte.api.client.AirbyteApiClient;
-import io.airbyte.api.client.invoker.generated.ApiClient;
-import io.airbyte.api.client.invoker.generated.ApiException;
 import io.airbyte.api.client.model.generated.AirbyteCatalog;
-import io.airbyte.api.client.model.generated.AirbyteStream;
-import io.airbyte.api.client.model.generated.AttemptInfoRead;
-import io.airbyte.api.client.model.generated.ConnectionIdRequestBody;
-import io.airbyte.api.client.model.generated.ConnectionState;
 import io.airbyte.api.client.model.generated.DestinationDefinitionIdRequestBody;
 import io.airbyte.api.client.model.generated.DestinationDefinitionRead;
-import io.airbyte.api.client.model.generated.DestinationRead;
 import io.airbyte.api.client.model.generated.DestinationSyncMode;
-import io.airbyte.api.client.model.generated.JobIdRequestBody;
 import io.airbyte.api.client.model.generated.JobInfoRead;
-import io.airbyte.api.client.model.generated.JobRead;
-import io.airbyte.api.client.model.generated.JobStatus;
 import io.airbyte.api.client.model.generated.SourceDefinitionIdRequestBody;
 import io.airbyte.api.client.model.generated.SourceDefinitionRead;
 import io.airbyte.api.client.model.generated.SourceDiscoverSchemaRead;
-import io.airbyte.api.client.model.generated.SourceRead;
 import io.airbyte.api.client.model.generated.StreamStatusJobType;
 import io.airbyte.api.client.model.generated.StreamStatusRunState;
 import io.airbyte.api.client.model.generated.SyncMode;
-import io.airbyte.commons.json.Jsons;
-import io.airbyte.commons.lang.MoreBooleans;
 import io.airbyte.test.utils.AcceptanceTestHarness;
 import io.airbyte.test.utils.Asserts;
 import io.airbyte.test.utils.TestConnectionCreate;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
@@ -85,33 +59,24 @@ import org.slf4j.LoggerFactory;
 class AdvancedAcceptanceTests {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(AdvancedAcceptanceTests.class);
-  private static final String TYPE = "type";
-  private static final String COLUMN1 = "column1";
 
   private static AcceptanceTestHarness testHarness;
-  private static AirbyteApiClient apiClient;
   private static UUID workspaceId;
   private static final String AIRBYTE_SERVER_HOST = Optional.ofNullable(System.getenv("AIRBYTE_SERVER_HOST")).orElse("http://localhost:8001");
 
   @BeforeAll
-  static void init() throws URISyntaxException, IOException, InterruptedException, ApiException {
-    final URI url = new URI(AIRBYTE_SERVER_HOST);
-    apiClient = new AirbyteApiClient(
-        new ApiClient().setScheme(url.getScheme())
-            .setHost(url.getHost())
-            .setPort(url.getPort())
-            .setBasePath("/api"));
+  static void init() throws Exception {
+    final var apiClient = createAirbyteApiClient(AIRBYTE_SERVER_HOST + "/api", Map.of());
+
     // work in whatever default workspace is present.
-    workspaceId = apiClient.getWorkspaceApi().listWorkspaces().getWorkspaces().get(0).getWorkspaceId();
-    LOGGER.info("workspaceId = " + workspaceId);
+    workspaceId = apiClient.getWorkspaceApi().listWorkspaces().getWorkspaces().getFirst().getWorkspaceId();
+    LOGGER.info("workspaceId = {}", workspaceId);
 
     // log which connectors are being used.
     final SourceDefinitionRead sourceDef = apiClient.getSourceDefinitionApi()
-        .getSourceDefinition(new SourceDefinitionIdRequestBody()
-            .sourceDefinitionId(UUID.fromString("decd338e-5647-4c0b-adf4-da0e75f5a750")));
+        .getSourceDefinition(new SourceDefinitionIdRequestBody(UUID.fromString("decd338e-5647-4c0b-adf4-da0e75f5a750")));
     final DestinationDefinitionRead destinationDef = apiClient.getDestinationDefinitionApi()
-        .getDestinationDefinition(new DestinationDefinitionIdRequestBody()
-            .destinationDefinitionId(UUID.fromString("25c5221d-dce2-4163-ade9-739ef790f503")));
+        .getDestinationDefinition(new DestinationDefinitionIdRequestBody(UUID.fromString("25c5221d-dce2-4163-ade9-739ef790f503")));
     LOGGER.info("pg source definition: {}", sourceDef.getDockerImageTag());
     LOGGER.info("pg destination definition: {}", destinationDef.getDockerImageTag());
 
@@ -123,8 +88,6 @@ class AdvancedAcceptanceTests {
     testHarness.stopDbAndContainers();
   }
 
-  // TODO re-enable this test after investigating the failure
-  @Disabled
   @SuppressWarnings("PMD.JUnitTestsShouldIncludeAssert")
   @Test
   void testManualSync() throws Exception {
@@ -134,10 +97,21 @@ class AdvancedAcceptanceTests {
     final UUID destinationId = testHarness.createPostgresDestination().getDestinationId();
 
     final SourceDiscoverSchemaRead discoverResult = testHarness.discoverSourceSchemaWithId(sourceId);
-    final AirbyteCatalog catalog = discoverResult.getCatalog();
     final SyncMode syncMode = SyncMode.FULL_REFRESH;
     final DestinationSyncMode destinationSyncMode = DestinationSyncMode.OVERWRITE;
-    catalog.getStreams().forEach(s -> s.getConfig().syncMode(syncMode).destinationSyncMode(destinationSyncMode).selected(true));
+    final AirbyteCatalog catalog = modifyCatalog(
+        discoverResult.getCatalog(),
+        Optional.of(syncMode),
+        Optional.of(destinationSyncMode),
+        Optional.empty(),
+        Optional.empty(),
+        Optional.of(true),
+        Optional.empty(),
+        Optional.empty(),
+        Optional.empty(),
+        Optional.empty(),
+        Optional.empty(),
+        Optional.empty());
     final var conn =
         testHarness.createConnection(new TestConnectionCreate.Builder(
             sourceId,
@@ -146,154 +120,15 @@ class AdvancedAcceptanceTests {
             discoverResult.getCatalogId())
                 .build());
     final var connectionId = conn.getConnectionId();
-    JobInfoRead connectionSyncRead = apiClient.getConnectionApi().syncConnection(new ConnectionIdRequestBody().connectionId(connectionId));
-    waitForSuccessfulJob(apiClient.getJobsApi(), connectionSyncRead.getJob());
+    final JobInfoRead connectionSyncRead = testHarness.syncConnection(connectionId);
+    testHarness.waitForSuccessfulJob(connectionSyncRead.getJob());
     Asserts.assertSourceAndDestinationDbRawRecordsInSync(testHarness.getSourceDatabase(), testHarness.getDestinationDatabase(), PUBLIC_SCHEMA_NAME,
         conn.getNamespaceFormat(), false, false);
 
-    LOGGER.info("===== before stream");
-    final var finalJob = apiClient.getJobsApi().getJobInfoWithoutLogs(new JobIdRequestBody().id(connectionSyncRead.getJob().getId()));
-    Asserts.assertStreamStatuses(apiClient, workspaceId, connectionId, finalJob, StreamStatusRunState.COMPLETE, StreamStatusJobType.SYNC);
+    Asserts.assertStreamStatuses(testHarness, workspaceId, connectionId, connectionSyncRead.getJob().getId(), StreamStatusRunState.COMPLETE,
+        StreamStatusJobType.SYNC);
 
     testHarness.cleanup();
-  }
-
-  @Test
-  void testCheckpointing() throws Exception {
-    final SourceDefinitionRead sourceDefinition = testHarness.createE2eSourceDefinition(workspaceId);
-    final DestinationDefinitionRead destinationDefinition = testHarness.createE2eDestinationDefinition(workspaceId);
-
-    final SourceRead source = testHarness.createSource(
-        "E2E Test Source -" + UUID.randomUUID(),
-        workspaceId,
-        sourceDefinition.getSourceDefinitionId(),
-        Jsons.jsonNode(ImmutableMap.builder()
-            .put(TYPE, "EXCEPTION_AFTER_N")
-            .put("throw_after_n_records", 100)
-            .build()));
-
-    final DestinationRead destination = testHarness.createDestination(
-        "E2E Test Destination -" + UUID.randomUUID(),
-        workspaceId,
-        destinationDefinition.getDestinationDefinitionId(),
-        Jsons.jsonNode(ImmutableMap.of(TYPE, "SILENT")));
-
-    final UUID sourceId = source.getSourceId();
-    final UUID destinationId = destination.getDestinationId();
-    final SourceDiscoverSchemaRead discoverResult = testHarness.discoverSourceSchemaWithId(sourceId);
-    final AirbyteCatalog catalog = discoverResult.getCatalog();
-    final AirbyteStream stream = catalog.getStreams().get(0).getStream();
-
-    assertEquals(
-        Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL),
-        stream.getSupportedSyncModes());
-    assertTrue(MoreBooleans.isTruthy(stream.getSourceDefinedCursor()));
-
-    final SyncMode syncMode = SyncMode.INCREMENTAL;
-    final DestinationSyncMode destinationSyncMode = DestinationSyncMode.APPEND;
-    catalog.getStreams().forEach(s -> s.getConfig()
-        .syncMode(syncMode)
-        .cursorField(List.of(COLUMN_ID))
-        .selected(true)
-        .destinationSyncMode(destinationSyncMode));
-    final UUID connectionId =
-        testHarness.createConnection(new TestConnectionCreate.Builder(
-            sourceId,
-            destinationId,
-            catalog,
-            discoverResult.getCatalogId()).build())
-            .getConnectionId();
-    final JobInfoRead connectionSyncRead1 = apiClient.getConnectionApi()
-        .syncConnection(new ConnectionIdRequestBody().connectionId(connectionId));
-
-    // wait to get out of pending.
-    final JobRead runningJob = waitWhileJobHasStatus(apiClient.getJobsApi(), connectionSyncRead1.getJob(), Sets.newHashSet(JobStatus.PENDING));
-    // wait to get out of running.
-    waitWhileJobHasStatus(apiClient.getJobsApi(), runningJob, Sets.newHashSet(JobStatus.RUNNING));
-    // now cancel it so that we freeze state!
-    try {
-      apiClient.getJobsApi().cancelJob(new JobIdRequestBody().id(connectionSyncRead1.getJob().getId()));
-    } catch (final Exception e) {
-      LOGGER.error("error:", e);
-    }
-
-    final ConnectionState connectionState = waitForConnectionState(apiClient, connectionId);
-
-    /*
-     * the source is set to emit a state message every 5th message. because of the multithreaded nature,
-     * we can't guarantee exactly what checkpoint will be registered. what we can do is send enough
-     * messages to make sure that we check point at least once.
-     */
-    assertNotNull(connectionState.getState());
-    assertTrue(connectionState.getState().get(COLUMN1).isInt());
-    LOGGER.info("state value: {}", connectionState.getState().get(COLUMN1).asInt());
-    assertTrue(connectionState.getState().get(COLUMN1).asInt() > 0);
-    assertEquals(0, connectionState.getState().get(COLUMN1).asInt() % 5);
-  }
-
-  // verify that when the worker uses backpressure from pipes that no records are lost.
-  @Test
-  void testBackpressure() throws Exception {
-    final SourceDefinitionRead sourceDefinition = testHarness.createE2eSourceDefinition(workspaceId);
-    final DestinationDefinitionRead destinationDefinition = testHarness.createE2eDestinationDefinition(workspaceId);
-
-    final SourceRead source = testHarness.createSource(
-        "E2E Test Source -" + UUID.randomUUID(),
-        workspaceId,
-        sourceDefinition.getSourceDefinitionId(),
-        Jsons.jsonNode(ImmutableMap.builder()
-            .put(TYPE, "INFINITE_FEED")
-            .put("max_records", 5000)
-            .build()));
-
-    final DestinationRead destination = testHarness.createDestination(
-        "E2E Test Destination -" + UUID.randomUUID(),
-        workspaceId,
-        destinationDefinition.getDestinationDefinitionId(),
-        Jsons.jsonNode(ImmutableMap.builder()
-            .put(TYPE, "THROTTLED")
-            .put("millis_per_record", 1)
-            .build()));
-
-    final UUID sourceId = source.getSourceId();
-    final UUID destinationId = destination.getDestinationId();
-    final SourceDiscoverSchemaRead discoverResult = testHarness.discoverSourceSchemaWithId(sourceId);
-    final AirbyteCatalog catalog = discoverResult.getCatalog();
-    catalog.getStreams().forEach(s -> s.getConfig().selected(true));
-
-    final UUID connectionId =
-        testHarness.createConnection(new TestConnectionCreate.Builder(
-            sourceId,
-            destinationId,
-            catalog,
-            discoverResult.getCatalogId()).build())
-            .getConnectionId();
-    final JobInfoRead connectionSyncRead1 = apiClient.getConnectionApi()
-        .syncConnection(new ConnectionIdRequestBody().connectionId(connectionId));
-
-    // wait to get out of pending.
-    final JobRead runningJob = waitWhileJobHasStatus(apiClient.getJobsApi(), connectionSyncRead1.getJob(), Sets.newHashSet(JobStatus.PENDING));
-    // wait to get out of running.
-    waitWhileJobHasStatus(apiClient.getJobsApi(), runningJob, Sets.newHashSet(JobStatus.RUNNING));
-
-    final JobInfoRead jobInfo = apiClient.getJobsApi().getJobInfo(new JobIdRequestBody().id(runningJob.getId()));
-    final AttemptInfoRead attemptInfoRead = jobInfo.getAttempts().get(jobInfo.getAttempts().size() - 1);
-    assertNotNull(attemptInfoRead);
-
-    int expectedMessageNumber = 0;
-    final int max = 10_000;
-    for (final String logLine : attemptInfoRead.getLogs().getLogLines()) {
-      if (expectedMessageNumber > max) {
-        break;
-      }
-
-      if (logLine.contains("received record: ") && logLine.contains("\"type\": \"RECORD\"")) {
-        assertTrue(
-            logLine.contains(String.format("\"column1\": \"%s\"", expectedMessageNumber)),
-            String.format("Expected %s but got: %s", expectedMessageNumber, logLine));
-        expectedMessageNumber++;
-      }
-    }
   }
 
 }
