@@ -1,28 +1,27 @@
 /*
- * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.test.acceptance;
 
+import static io.airbyte.test.utils.AcceptanceTestUtils.createAirbyteApiClient;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import dev.failsafe.RetryPolicy;
-import io.airbyte.api.client2.AirbyteApiClient2;
-import io.airbyte.api.client2.model.generated.CustomDestinationDefinitionCreate;
-import io.airbyte.api.client2.model.generated.CustomSourceDefinitionCreate;
-import io.airbyte.api.client2.model.generated.DestinationDefinitionCreate;
-import io.airbyte.api.client2.model.generated.DestinationDefinitionIdRequestBody;
-import io.airbyte.api.client2.model.generated.DestinationDefinitionRead;
-import io.airbyte.api.client2.model.generated.SourceDefinitionCreate;
-import io.airbyte.api.client2.model.generated.SourceDefinitionIdRequestBody;
-import io.airbyte.api.client2.model.generated.SourceDefinitionRead;
+import io.airbyte.api.client.AirbyteApiClient;
+import io.airbyte.api.client.model.generated.CustomDestinationDefinitionCreate;
+import io.airbyte.api.client.model.generated.CustomSourceDefinitionCreate;
+import io.airbyte.api.client.model.generated.DestinationDefinitionCreate;
+import io.airbyte.api.client.model.generated.DestinationDefinitionIdRequestBody;
+import io.airbyte.api.client.model.generated.DestinationDefinitionRead;
+import io.airbyte.api.client.model.generated.SourceDefinitionCreate;
+import io.airbyte.api.client.model.generated.SourceDefinitionIdRequestBody;
+import io.airbyte.api.client.model.generated.SourceDefinitionRead;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.time.Duration;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import okhttp3.OkHttpClient;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -32,21 +31,14 @@ import org.junit.jupiter.params.provider.CsvSource;
 @TestInstance(Lifecycle.PER_CLASS)
 class VersioningAcceptanceTests {
 
-  private static AirbyteApiClient2 apiClient2;
+  private static AirbyteApiClient apiClient2;
   private static UUID workspaceId;
   private static final String AIRBYTE_SERVER_HOST = Optional.ofNullable(System.getenv("AIRBYTE_SERVER_HOST")).orElse("http://localhost:8001");
 
   @BeforeAll
-  static void init() throws IOException, URISyntaxException {
-    RetryPolicy<okhttp3.Response> policy = RetryPolicy.<okhttp3.Response>builder()
-        .handle(Throwable.class)
-        .withMaxAttempts(5)
-        .withBackoff(Duration.ofSeconds(1), Duration.ofSeconds(10)).build();
-
-    OkHttpClient client = new OkHttpClient.Builder().readTimeout(Duration.ofSeconds(20)).build();
-    apiClient2 = new AirbyteApiClient2(String.format("%s/api", AIRBYTE_SERVER_HOST), policy, client);
-
-    workspaceId = apiClient2.getWorkspaceApi().listWorkspaces().getWorkspaces().get(0).getWorkspaceId();
+  static void init() throws IOException {
+    apiClient2 = createAirbyteApiClient(String.format("%s/api", AIRBYTE_SERVER_HOST), Map.of());
+    workspaceId = apiClient2.getWorkspaceApi().listWorkspaces().getWorkspaces().getFirst().getWorkspaceId();
   }
 
   @ParameterizedTest
